  values loaded from the server, it is useful to apply the same validation and
  error handling to all fields.

- Added an API method ``when_saved(retry)`` that returns a promise that
  aggregates any pending and completed save calls, either propagating the
  retry behaviour of single fields (the default) or failing on server errors.

- Provide a visual clue and status message while saving a field.

- Some refactoring to improve code readability.

- Made code pass jshint check.


1.0 (2013-12-13)
================

- Remove console calls as they are not understood by all browsers.


0.8 (2013-12-10)
================

- Fixed: jsform did not render in IE8 if form template started with line break.


0.7 (2013-12-03)
================

- Add ability to send a CSRF token with every request. This token must be
  available via the id `csrf_token` (can be customized) in the DOM.

- Added minified versions of javascript resources.


0.6 (2013-09-06)
================

- Bugfix: Use ``indexOf`` instead of ``startsWith``, which is not available on
  all browsers.


0.5 (2013-09-06)
================

- Declare ``for`` attribute on form labels.

- Store "save on change" subscriptions so they can be cancelled.

- Ignore ``null`` values for data fields. (#1)


0.4 (2013-08-27)
================

- Made it possible to define templates as template files on file system.


0.3 (2013-08-27)
================

- Add events ``after-load`` and ``after-save``.

- Fix ``JSON`` serialization to be able to handle Knockout observables.

- Added ``reload`` functionality to the form class.


0.2 (2013-08-26)
================

- Made it possible to preselect values in arrays when the form is rendered.

- Changed form submit behaviour:

  - Default submit type is not ``POST`` instead of ``GET``. (Change it with the
    ``save_type`` option)

  - Data is now submitted as ``JSON`` type.


0.1 (2013-08-17)
================

initial release